# bucket

./: .gitignore  CMakeLists.txt  README.md  bucket.cc
include/: BucketActionInitialization.hh  BucketAnalysisManager.hh  BucketDetectorConstruction.hh  BucketDetectorMessenger.hh  BucketEventAction.hh  BucketMaterials.hh  BucketPhysicsList.hh  BucketPrimaryGeneratorAction.hh  BucketRunAction.hh  BucketSteppingAction.hh
macros/: preinit.mac  run.mac  visualization.mac
src/: BucketActionInitialization.cc  BucketAnalysisManager.cc  BucketDetectorConstruction.cc  BucketDetectorMessenger.cc  BucketEventAction.cc  BucketMaterials.cc  BucketPhysicsList.cc  BucketPrimaryGeneratorAction.cc  BucketRunAction.cc  BucketSteppingAction.cc
